# model-stealing-papers

./: .gitignore  README.md  fetch_papers.py  index.html  papers.json  papers_filtered.json  papers_filtered_excluded.json  plot_trends.py  pyproject.toml  run_all.py  trends.html
.github/workflows/: deploy.yml  update-papers.yml
configs/: ml01a_prompt_injection.yaml
data/: arxiv_metadata.json  awesome_ml_sp_papers.json  classifications.json  classifications_claude.json  manifest.json  ml01_papers.json  ml01a_papers.json  ml01a_raw.json  ml02_papers.json  ml03_papers.json  ml04_papers.json  ml05_papers.json  ml06_papers.json  ml07_papers.json  ml08_papers.json  ml09_papers.json  ml10_papers.json  papers.json
docs/: ARCHITECTURE.md
js/: app.js  categories.js
ml_security/: classifier.py
scripts/: classify_papers.py  export_website_data.py  fetch_all.py  fetch_papers.py  run_all.py
scripts/pipeline/: classify.py  discover.py  enrich_s2.py  expand.py  export.py  fetch.py  init.py  run.py  state.py
src/: config.py
web/: index.html
web/css/: style.css
web/js/: app.js  categories.js
